Fixed bugs/Backport to 1.20.1